# fastapi-app-template

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  rename_project.sh
.github/workflows/: cicd.yaml
docker/: compose.dev.yaml  compose.dev.yml  compose.grafana.yaml  compose.grafana.yml  compose.yaml  compose.yml
docker/conf/dashboards/: dashboards.yaml  todo-api.json
docker/conf/grafana/: datasource.yaml
docker/conf/prometheus/: prometheus.yml
migrations/: env.py  script.py.mako
migrations/versions/: 2025-04-21-1730_add_users_todos.py  2025-07-05-1548_add_user_sessions.py  2025-08-15_initial_c6be67127627.py
scripts/: check.sh  format.sh  init_db.py  seed_db.py
tests/: conftest.py  test_db_template.py  test_exception_handlers.py  test_otel.py  test_pagination.py  test_sqlalchemy_model_service.py  test_sqlalchemy_service.py
tests/auth/: test_session_auth.py
tests/fixtures/: __init__.py  auth.py  base.py  database.py  objects.py
tests/todos/: test_router.py
tests/users/: test_router.py
todo_api/: api.py  instrumentation.py  main.py  metrics.py  utils.py  version.py
todo_api/api/: app.py  auth.py  config.py  exception_handlers.py  exceptions.py  pagination.py  router.py  sorting.py
todo_api/api/dependencies/: auth.py  database.py  todos.py  users.py
todo_api/api/middleware/: __init__.py  configure.py  logging.py
todo_api/api/routers/: todos.py  users.py
todo_api/api/schemas/: todos.py  users.py
todo_api/auth/: dependencies.py  jwt.py  models.py  schemas.py  service.py
todo_api/cli/: __main__.py
todo_api/cli/templates/: dependencies.py.j2  models.py.j2  router.py.j2  schemas.py.j2  service.py.j2  test_router.py.j2
todo_api/core/: config.py  exception_handlers.py  exceptions.py  logging.py  pagination.py  schemas.py  sorting.py
todo_api/core/database/: aa_config.py  base.py  dependencies.py  exceptions.py  mixins.py  service.py
todo_api/core/middleware/: __init__.py  configure.py  logging.py  prometheus.py  request_id.py
todo_api/core/middleware/authentication/: __init__.py  dependencies.py  dto.py  middleware.py
todo_api/core/observability/: sqlalchemy_model_service.py  sqlalchemy_service.py
todo_api/core/service/: exceptions.py  sqlalchemy.py
todo_api/opentelemetry/: sqlalchemy_model_service.py  sqlalchemy_service.py
todo_api/todos/: dependencies.py  models.py  router.py  schemas.py  service.py
todo_api/users/: dependencies.py  models.py  router.py  schemas.py  service.py
