[project]
name = "todo-api"
version = "0.1.0"
requires-python = ">=3.13"
description = ""
authors = [{ name = "bartosz121", email = "bmagiera121@gmail.com" }]
readme = "README.md"
dependencies = [
    "fastapi==0.115.12",
    "argon2-cffi>=23.1.0,<24",
    "httptools>=0.6.4,<0.7",
    "passlib>=1.7.4,<1.8",
    "prometheus-client>=0.21.1,<0.22",
    "pydantic-settings>=2.8.1,<3",
    "pyjwt>=2.10.1,<3",
    "sqlalchemy[asyncio]>=2.0.40,<3",
    "structlog>=25.2.0,<26",
    "uvicorn[standard]>=0.34.1,<0.35",
    "uvloop>=0.21.0,<0.22",
    "aiosqlite>=0.21.0,<0.22",
    "alembic>=1.15.2,<1.16",
    "poethepoet>=0.36.0,<0.37",
]


[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "pyright>=1.1.402",
    "pytest>=8.3.5,<9",
    "pytest-cov>=6.1.1,<7",
    "pytest-mock>=3.14.0,<4",
    "pytest-sugar>=1.0.0,<2",
    "coverage[toml]>=7.8.0,<8",
    "faker>=37.1.0",
    "hypothesis>=6.131.0,<7",
    "types-passlib>=1.7.7.20250408",
    "sqlalchemy-utils>=0.41.2,<0.42",
    "httpx>=0.28.1,<0.29",
    "pytest-asyncio>=0.26.0,<0.27",
    "asgi-lifespan>=2.1.0,<3",
    "jinja2>=3.1.6,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I", "T20"]
isort = { combine-as-imports = true }
mccabe = { max-complexity = 15 }

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
venvPath = ".venv"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["auth"]
filterwarnings = [
    "ignore:Accessing argon2.__version__ is deprecated:DeprecationWarning:passlib.handlers.argon2",
    # This happens because the app is initialized for each test, which is fine for testing
    "ignore:Repeated configuration attempted:RuntimeWarning:todo_api.core.logging",
]

[tool.poe.tasks]
format = { shell = "ruff format . && ruff check --fix ." }
lint = { shell = "ruff format --check . && ruff check ." }
typecheck = "pyright --warnings ."
cli = "python -m todo_api.cli"
