[project]
name = "todo-api"
version = "0.1.0"
requires-python = ">=3.14"
description = ""
authors = [{ name = "bartosz121", email = "bmagiera121@gmail.com" }]
readme = "README.md"
dependencies = [
    "fastapi==0.123.9",
    "argon2-cffi>=25.1.0,<26",
    "passlib>=1.7.4,<1.8",
    "prometheus-client>=0.23.1,<0.24",
    "pydantic-settings>=2.12.0,<3",
    "sqlalchemy[asyncio]>=2.0.44,<3",
    "structlog>=25.5.0,<26",
    "aiosqlite>=0.21.0,<0.22",
    "alembic>=1.17.2,<1.18",
    "poethepoet>=0.38.0,<0.39",
    "granian[reload,uvloop]>=2.6.0,<3",
]


[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "pyright>=1.1.407",
    "pytest>=9.0.1,<10",
    "pytest-cov>=7.0.0,<8",
    "pytest-mock>=3.15.0,<4",
    "pytest-sugar>=1.1.1,<2",
    "coverage[toml]>=7.12.0,<8",
    "faker>=38.2.0,<39",
    "hypothesis>=6.148.7,<7",
    "types-passlib>=1.7.7.20250602",
    "sqlalchemy-utils>=0.42.0,<0.43",
    "httpx>=0.28.1,<0.29",
    "pytest-asyncio>=1.3.0,<2",
    "asgi-lifespan>=2.1.0,<3",
    "jinja2>=3.1.6,<4",
    "pytest-env>=1.2.0,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 99

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I", "T20", "FAST", "ANN", "ASYNC"]
isort = { combine-as-imports = true }
mccabe = { max-complexity = 15 }

[tool.ruff.lint.per-file-ignores]
# `Missing return type annotation for public function`
# I prefer `response_model` over endpoint function return type hint
"**/router.py" = ["ANN201"]
"tests/**" = ["ANN201", "ANN202"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
venvPath = ".venv"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]


[tool.pytest]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = ["auth"]
filterwarnings = [
    "ignore:Accessing argon2.__version__ is deprecated:DeprecationWarning:passlib.handlers.argon2",
    # This happens because the app is initialized for each test, which is fine for testing
    "ignore:Repeated configuration attempted:RuntimeWarning:todo_api.core.logging",
]
env = ["ENVIRONMENT=TESTING"]

[tool.poe.tasks]
format = { shell = "ruff format . && ruff check --fix ." }
lint = { shell = "ruff format --check . && ruff check ." }
typecheck = "pyright --warnings ."
test = "pytest -vv"
cli = "python -m todo_api.cli"
